--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 						<a class="nav-link" href="#about">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#services">Cities</a>
+						<a class="nav-link" href="#cities">Cities</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#portfolio">Nature</a>
+						<a class="nav-link" href="#nature">Nature</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#contact">Contact</a>
@@ -33,6 +33,36 @@
 			</div>
 		</div>
 	</nav>
+    <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
+		<div class="carousel-indicators">
+			<button aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleIndicators" type="button"></button> <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleIndicators" type="button"></button> <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleIndicators" type="button"></button>
+		</div>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img alt="mountains around lake" class="d-block w-100" src="./img/montana1.jpg">
+				<div class="carousel-caption">
+					<h5>Some Text Here</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+					<p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img alt="prairiie with mountains in back" class="d-block w-100" src="./img/montana2.jpg">
+				<div class="carousel-caption">
+					<h5>Some Text Here</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+					<p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img alt="person fly fishing with mountains in back" class="d-block w-100" src="./img/montana3.jpg">
+				<div class="carousel-caption">
+					<h5>Some Text Here</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+					<p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
+				</div>
+			</div>
+		</div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleIndicators" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleIndicators" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
