external links and text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             quas vero.
                         </p>
                         <p>
-                            <a class="btn btn-warning mt-3" href="#"
+                            <a class="btn btn-warning mt-3" href="#about"
                                 >Learn More</a
                             >
                         </p>
@@ -117,7 +117,7 @@
                             quas vero.
                         </p>
                         <p>
-                            <a class="btn btn-warning mt-3" href="#"
+                            <a class="btn btn-warning mt-3" href="#about"
                                 >Learn More</a
                             >
                         </p>
@@ -137,7 +137,7 @@
                             quas vero.
                         </p>
                         <p>
-                            <a class="btn btn-warning mt-3" href="#"
+                            <a class="btn btn-warning mt-3" href="#about"
                                 >Learn More</a
                             >
                         </p>
@@ -186,15 +186,7 @@
                         <div class="about-text">
                             <h2>The Last Best Place</h2>
                             <p>
-                                Lorem ipsum, dolor sit amet consectetur
-                                adipisicing elit. Totam, labore reiciendis.
-                                Assumenda eos quod animi! Soluta nesciunt
-                                inventore dolores excepturi provident, culpa
-                                beatae tempora, explicabo corporis quibusdam
-                                corrupti. Autem, quaerat. Assumenda quo aliquam
-                                vel, nostrum explicabo ipsum dolor, ipsa
-                                perferendis porro doloribus obcaecati placeat
-                                natus iste odio est non earum?
+                                The unoffcial nickname for Montana - the last best place. The origin of the nickname is disputed. It could be from the fact that Montana has an average of 7.4 people per square mile. Only Alaska and Wyoming have fewer people per square mile than Montana. As a reference, the national average is 75 people per square mile. Or the nickname could be because Montana still feels very wild and remote with large predators such as the grizzly bear. For Montanan's, it's the kind, hard-working, and helpful residents that make this state so special.
                             </p>
 
                         </div>
@@ -211,8 +203,8 @@
                         <div class="section-header text-center pb-5">
                             <h2>Southwest Montana Cities</h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur<br />
-                                adipisicing elit. Non, quo.
+                                Small Cities.<br />
+                                Big Views.
                             </p>
                         </div>
                     </div>
@@ -223,19 +215,17 @@
                             <div class="card-body">
                                 <div class="img-area mb-4">
                                     <img
-                                        alt=""
+                                        alt="mountain views from airplane window"
                                         class="img-fluid"
                                         src="./img/airplane.jpg"
                                     />
                                 </div>
                                 <h3 class="card-title">Bozeman</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    Great food, great shopping, and close proximity to all Montana's outdoor activities - Yellowstone, Skiing, Hiking, Fly-fishing, and more!
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Read More
+                                    <a href="https://visitbozeman.com/" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -245,19 +235,17 @@
                             <div class="card-body">
                                 <div class="img-area mb-4">
                                     <img
-                                        alt=""
+                                        alt="bartender pouring a beer"
                                         class="img-fluid"
                                         src="./img/brewery.jpg"
                                     />
                                 </div>
                                 <h3 class="card-title">Helena</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    The state capital with delicious breweries, awesome art, and close to the Missouri River and National Forests for all your outdoor fun!
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Read More
+                                    <a href="https://helenamt.com/" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -267,19 +255,17 @@
                             <div class="card-body">
                                 <div class="img-area mb-4">
                                     <img
-                                        alt=""
+                                        alt="a person walking downtown with snow falling"
                                         class="img-fluid"
                                         src="./img/shopping.jpg"
                                     />
                                 </div>
                                 <h3 class="card-title">Missoula</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    A hip city with restaurants, brews, and a whole lot to do! From summertime in the lakes, rivers, or trails to the winter slopes and hot springs.
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Read More
+                                    <a href="https://destinationmissoula.org/" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -296,8 +282,8 @@
                         <div class="section-header text-center pb-5">
                             <h2>The Great Outdoors</h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur<br />
-                                adipisicing elit. Non, quo.
+                                So much fun and beauty<br />
+                                in the Big Sky state.
                             </p>
                         </div>
                     </div>
@@ -320,7 +306,7 @@
                                     temporibus alias iste. Accusantium?
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Learn More
+                                    <a href="https://www.nps.gov/yell/index.htm" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -342,7 +328,7 @@
                                     temporibus alias iste. Accusantium?
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Learn More
+                                    <a href="https://www.nps.gov/glac/index.htm" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -364,7 +350,7 @@
                                     temporibus alias iste. Accusantium?
                                 </p>
                                 <button class="btn bg-warning text-dark">
-                                    Learn More
+                                    <a href="https://bigskyresort.com/" target="_blank" >Read More</a>
                                 </button>
                             </div>
                         </div>
@@ -381,8 +367,7 @@
                         <div class="section-header text-center pb-5">
                             <h2>Contact Us</h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur<br />
-                                adipisicing elit. Non, quo.
+                                For questions and trip planning.
                             </p>
                         </div>
                     </div>
