--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         src="./img/montana1.jpg"
                     />
                     <div class="carousel-caption">
-                        <h5>Some Text Here</h5>
+                        <h5>Big Sky Country</h5>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Maxime, nulla, tempore. Deserunt excepturi
@@ -110,7 +110,7 @@
                         src="./img/montana2.jpg"
                     />
                     <div class="carousel-caption">
-                        <h5>Some Text Here</h5>
+                        <h5>Rocky Mountain Views</h5>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Maxime, nulla, tempore. Deserunt excepturi
@@ -130,7 +130,7 @@
                         src="./img/montana3.jpg"
                     />
                     <div class="carousel-caption">
-                        <h5>Some Text Here</h5>
+                        <h5>Get Lost or Get Found</h5>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Maxime, nulla, tempore. Deserunt excepturi
@@ -301,9 +301,7 @@
                                 </div>
                                 <h3 class="card-title">Yellowstone</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    The first national park. Enjoy unique active geysers, observe wildlife, and view geologic wonders.
                                 </p>
                                 <button class="btn bg-warning text-dark">
                                     <a href="https://www.nps.gov/yell/index.htm" target="_blank" >Read More</a>
@@ -323,9 +321,7 @@
                                 </div>
                                 <h3 class="card-title">Glacier</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    A showcase of melting glaciers, alpine meadows, carved valleys, and spectacular lakes.
                                 </p>
                                 <button class="btn bg-warning text-dark">
                                     <a href="https://www.nps.gov/glac/index.htm" target="_blank" >Read More</a>
@@ -345,9 +341,7 @@
                                 </div>
                                 <h3 class="card-title">Big Sky</h3>
                                 <p class="lead">
-                                    Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Adipisci eligendi modi
-                                    temporibus alias iste. Accusantium?
+                                    Great skiing, hiking, fishing, family-friendly. Great views and food all year long!
                                 </p>
                                 <button class="btn bg-warning text-dark">
                                     <a href="https://bigskyresort.com/" target="_blank" >Read More</a>
