--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
                     <div class="carousel-caption">
                         <h5>Big Sky Country</h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Maxime, nulla, tempore. Deserunt excepturi
-                            quas vero.
+                            Visit southwest Montana for the views, activities, and wildness. Stay for the people and state of mind.
                         </p>
                         <p>
                             <a class="btn btn-warning mt-3" href="#about"
@@ -112,9 +110,7 @@
                     <div class="carousel-caption">
                         <h5>Rocky Mountain Views</h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Maxime, nulla, tempore. Deserunt excepturi
-                            quas vero.
+                            A diverse landscape wide open plains, rugged mountains, alpine lakes, and unique geologic features.
                         </p>
                         <p>
                             <a class="btn btn-warning mt-3" href="#about"
@@ -132,9 +128,7 @@
                     <div class="carousel-caption">
                         <h5>Get Lost or Get Found</h5>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Maxime, nulla, tempore. Deserunt excepturi
-                            quas vero.
+                            Outdoor activities year round including world-class skiing, fly-fishing, hiking, and star gazing.
                         </p>
                         <p>
                             <a class="btn btn-warning mt-3" href="#about"
